# pyutils

./: .gitignore  .pre-commit-config.yaml  =1.17.0  CLAUDE.md  CODE_REVIEW_2025_11_21.md  IMPROVEMENTS.md  LICENSE  README.md  blobbing_more.py  classcreator.py  cli_builder.py  collections_helpers.py  context_manager.py  email_report.py  faker_generator.py  file_hasher.py  flashtext_test.py  google_search.py  handwriter.py  mail_sender.py  password_generator.py  pdf_summarizer.py  pdf_text.py  pdf_toolbox.py  photo_editor.py  pyproject.toml  qrcode_generator.py  rename_files.py  requirements.txt  scheduler.py  search_notes.py  tool_creator.py  watermarker.py  web_summarizer.py
.cursor/rules/: python-classes-rule.mdc  python-decorators.mdc  python-rules.mdc  python-tips.mdc
.github/workflows/: ci.yml
audio/: audio_speaker.py  voice_todo.py
bulk/: clean_rename_bulk.py
common/: cli_helpers.py  exceptions.py  file_helpers.py  image_helpers.py
data/: csv_tools.py  json_tools.py
files/: clipboard_history.py  duplicate_finder.py  pathfinder.py
images/: IMAGES.md  content_aware_resize.py  exif_manager.py  image_compare.py  image_contact_sheet.py  image_deduper.py  image_heic_converter.py  image_resizer.py  photo_organizer.py  remove_background.py  watermarker.py
office/: docx_creator.py  excel_creator.py
screenshots/: screenshot_texter.py
search-notes/: search_notes.py
tests/: __init__.py  conftest.py  test_new_tools.py  test_password_generator.py
tests/test_common/: __init__.py
tests/test_data/: __init__.py
tests/test_files/: __init__.py  test_file_hasher.py  test_pathfinder.py  test_rename_files.py
tests/test_images/: __init__.py
tests/test_text_nlp/: __init__.py  test_collections_helpers.py
tests/test_web/: __init__.py
text_nlp/: blobbing.py  blobbing_more.py  markdown_converter.py  openai_api.py  proofreader.py  summarizer.py
ttrpg/: __init__.py  content_generator.py  dice_roller.py  name_generator.py  npc_generator.py  random_table.py
type-fixer/: README.md  type_fixer.py
video/: __init__.py  video_toolbox.py
web/: api_tester.py  link_preview.py  url_status_checker.py  wikifacts.py
web_interface/: README.md  __init__.py  app.py  requirements.txt  start_browser.sh  test_api.py  test_enhanced_features.py  tool_index.json  tool_indexer.py
web_interface/templates/: index.html
