[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyutils"
version = "0.1.0"
description = "A collection of small Python CLI utilities."
authors = [
  { name = "Cam Auger" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["cli", "utilities", "tools"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

# Core deps (minimal baseline used by many scripts)
dependencies = [
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.2",
  "Pillow>=10.2.0",
]

[project.optional-dependencies]
# Optional groups you can install via: pip install .[group]
text = [
  "textblob>=0.18.0.post0",
  "flashtext>=2.7",
]
excel = [
  "pandas>=2.2.2",
  "openpyxl>=3.1.2",
]
pdf = [
  "pdfplumber>=0.11.0",
  "PyPDF2>=3.0.1",
]
nlp = [
  "transformers>=4.40.0",
]
oneai = [
  "openai>=1.30.0",
]
media = [
  "rembg>=2.0.56",
]
audio = [
  "SpeechRecognition>=3.10.0",
  # one of the following may be needed per-OS
  # "pyaudio>=0.2.14",
  # "sounddevice>=0.4.6",
]
web = [
  "pywhatkit>=5.4",
  "wikipedia>=1.4.0",
]
ui = [
  "streamlit>=1.36.0",
]

[project.scripts]
# Map some scripts to console commands (installable entry points)
rename-files = "files.rename_files:main"
audio-speaker = "audio.audio_speaker:main"
blobbing = "text_nlp.blobbing:main"
blobbing-more = "text_nlp.blobbing_more:main"
cli-builder = "cli_builder:app"
collections-helpers = "text_nlp.collections_helpers:main"
context-manager = "files.context_manager:main"
docx-creator = "office.docx_creator:main"
excel-creator = "office.excel_creator:main"
faker-generator = "data.faker_generator:main"
flashtext-test = "flashtext_test:main"
google-search = "web.google_search:main"
handwriter = "images.handwriter:main"
image-resizer = "images.image_resizer:main"
mail-sender = "mail_sender:main"
openai-api = "text_nlp.openai_api:main"
password-generator = "password_generator:main"
qrcode-generator = "qr.qrcode_generator:main"
pathfinder = "files.pathfinder:main"
clipboard-history = "files.clipboard_history:main"
pdf-text = "pdf.pdf_text:main"
pdf-summarizer = "pdf.pdf_summarizer:main"
photo-editor = "images.photo_editor:main"
proofreader = "text_nlp.proofreader:main"
remove-background = "images.remove_background:main"
summarizer = "text_nlp.summarizer:main"
web-summarizer = "web.web_summarizer:main"
voice-todo = "audio.voice_todo:main"
watermarker = "images.watermarker:main"
wikifacts = "web.wikifacts:main"
file-hasher = "files.file_hasher:main"
image-deduper = "images.image_deduper:main"
pdf-toolbox = "pdf.pdf_toolbox:main"
exif-manager = "images.exif_manager:main"
photo-organizer = "images.photo_organizer:main"
image-compare = "images.image_compare:main"
image-contact-sheet = "images.image_contact_sheet:main"

[tool.setuptools]
# Include all .py files by default
py-modules = []
